// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link - Snapshots > matches snapshot with default props 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <span>
    Default Link
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for combined props 1`] = `
<a
  class="custom-class"
  href="https://example.com"
>
  <span>
    Combined Props Link
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different children types 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <span>
    Text Link
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different children types 2`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <svg
    data-testid="svg-icon"
  >
    <circle
      cx="50"
      cy="50"
      r="40"
    />
  </svg>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different children types 3`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <img
    alt="Icon"
    src="/icon.png"
  />
</a>
`;

exports[`Link - Snapshots > matches snapshots for different href types 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <span>
    HTTP Link
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different href types 2`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="mailto:test@example.com"
>
  <span>
    Email Link
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different href types 3`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="tel:+1234567890"
>
  <span>
    Phone Link
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different sizes 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <span>
    Default Size
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different sizes 2`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-lg"
  href="https://example.com"
>
  <span>
    Large Size
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different sizes 3`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-xl"
  href="https://example.com"
>
  <span>
    Extra Large Size
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different variants 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
  href="https://example.com"
>
  <span>
    Default Variant
  </span>
</a>
`;

exports[`Link - Snapshots > matches snapshots for different variants 2`] = `
<a
  class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
  href="https://example.com"
>
  <span>
    Muted Variant
  </span>
</a>
`;
